# forest-4.0

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  demo.csv  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-build.yml  docker-publish.yml
src/forest/: config.py
src/forest/backtest/: engine.py  errors.py  grid.py  risk.py  trace.py  tradebook.py
src/forest/core/: indicators.py
src/forest/dashboard/: app.py
src/forest/live/: router.py
src/forest/utils/: log.py  timeframes.py  validate.py
src/forest4/: cli.py  config.py
src/forest4/backtest/: engine.py  errors.py  grid.py  risk.py  trace.py  tradebook.py
src/forest4/core/: indicators.py
src/forest4/dashboard/: app.py
src/forest4/examples/: synthetic.py
src/forest4/live/: router.py
src/forest4/utils/: log.py  timeframes.py  validate.py
tests/: test_cli.py  test_config.py  test_demo_data.py  test_engine.py  test_indicators.py  test_risk.py  test_router.py  test_timeframes.py
